# rusti

./: README.md
.github/workflows/: rust.yml
func/: Cargo.toml
func/ll/: Cargo.toml
func/ll/src/: main.rs
func/src/: fractal.rs  main.rs
inmem/: Cargo.toml
kodeline/: Cargo.toml
kodeline/modeler/: r.dbm
kodeline/src/: client.rs  constants.rs  deser.rs  main.rs  octachan.rs
spotty/: Cargo.toml
spotty/src/: main.rs  spotinf.rs
