[package]
name = "func"
version = "0.1.0"
authors = ["Utkarsh Raj <clearnote01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
num-complex = "0.2.4"
rand = "0.7.3"
maplit = "1.0.2"
clap = "2.33.1"
regex = "1.3.9"
anyhow = "1.0.31"
