
[package]
name = "server"
version = "0.1.0"
authors = ["Utkarsh Raj <clearnote01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = "1.4.5"
kuchiki = "0.8.0"
clap = "2.33.1"
failure = "0.1.8"
anyhow = "1.0.31"
reqwest = { version = "0.10.6", features = ["json", "blocking"] }
tokio = { version = "0.2.21", features = ["macros"] }
url = "2.1.1"
serde = { version = "1.0.113", features = ["derive"] }
prettytable-rs = "0.8.0"
